--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.73.4",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "^4.8.2"
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-svg": "^15.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
