--- a/package.json
+++ b/package.json
@@ -9,16 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^7.6.3",
+    "@react-native-picker/picker": "^2.7.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~50.0.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.10.4",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.14.1",
+    "react-native-picker-select": "^9.1.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
-    "react-native-svg": "^15.1.0"
+    "react-native-select-dropdown": "^4.0.0",
+    "react-native-svg": "^15.1.0",
+    "react-native-swipe-list-view": "^3.2.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
