--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.10.4",
     "react-native-elements": "^3.4.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-picker-select": "^9.1.3",
     "react-native-reanimated": "~3.6.2",
