--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^7.6.3",
     "@react-native-picker/picker": "^2.7.2",
-    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~50.0.2",
     "expo-status-bar": "~1.11.1",
